# bmasterai

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README-k8s.content.md  README-k8s.md  README.content.md  README.md  alerts_api.py  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-deploy.yml  enhanced-rag-ci.yml  publish-pypi.yml
alerts/: slack.py
bmasterai_telemetry/: __init__.py
bmasterai_telemetry/alerts/: __init__.py  slack.py  teams.py
config/: reasoning_config.yaml
docs/: README.content.md  README.md  getting-started.md  kubernetes-deployment.md
docs/cli/: overview.md
docs/examples/: rag-tutorials.md
docs/long-running-agents/: NOTES.md  README.md
docs/rag/: overview.md  qdrant-cloud.md
examples/: README.md  __init__.py  agentic_rag_logging.py  agents.yaml  basic_state_management.py  basic_usage.py  enhanced_examples.py  investment_analysis_logging.py  multi_collaborate.py  reasoning_logging_example.py  requirements.txt  run_examples.py  single_agent.py
examples/a2a-realestate-agentcore/: README.md  run_local.py
examples/agentcore-memory-agent/: .env.example  .gitignore  README.md  agentcore.yaml  requirements.txt
examples/agno-telemetry/: README.md  cost_otel_agno.py  gemini_agno_example.py  run_cost_example.sh  run_example.sh  send_test_alert.py
examples/ai-real-estate-agent-team/: README.md  ai_real_estate_agent_team.py  requirements.txt
examples/ai-sports_betting_analysis/: .env.example  README.md  base_agent.py  data_collection_agent.py  probability_calculation_agent.py  requirements.txt  setup.py  sports_betting_streamlit_app.py  statistical_analysis_agent.py
examples/ai-stock-research-agent/: GEMINI.md  README.md  alpha_vantage_api.py  firecrawl_agent.py  requirements.txt  stock_research_agent.py
examples/ai-stress-linkedin-reasoning/: .env.example  .env.template  Application Architecture: LinkedIn Chain of Thought Wellness Advisor.md  LinkedIn Data Extraction Research Findings.md  README.md  data_api.py  linkedin_wellness_agent.py  linkedin_wellness_agent_simple.py  linkedin_wellness_streamlit_app.py  requirements.txt
examples/amazon-bedrock-agentcore/: .env.example  README.md  agent.py  cleanup.py  deploy.py  pyproject.toml  test_local.py
examples/amazon-bedrock-agentcore/tools/: __init__.py  budget_tools.py  cost_explorer_tools.py  research_tools.py
examples/claude-web-computer-agent/: .env.example  README.md  agent.py  main.py  requirements.txt  tools.py
examples/deep-research-agent/: .env.example  README.md  agents.py  graph.py  main.py  requirements.txt  state.py
examples/enhanced-github-mcp-streamlit/: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  app.py  config.py  requirements.txt  test_enhanced_features.py
examples/gemini-reasoning-streamlit/: .env.example  README.md  gemini_reasoning_app.py  requirements.txt  streamlit_app.py
examples/gemini-web-computer-agent/: .env.example  .gitignore  README.md  agent.py  main.py  requirements.txt  tools.py
examples/google-adk/: .env.example  README.md  agent.yaml  ai-consultant.py  requirements.txt
examples/google-adk-a2a/: ADK.md  README.md  inspect_a2a.py  inspect_bmasterai.py  pyproject.toml  verify_setup.py
examples/google-adk-a2a/trip_planner/: agent.py
examples/google-adk-a2a/weather_agent/: agent.py
examples/google-adk-a2a/weather_mcp/: server.py
examples/gradio-anthropic/: .env.example  Dockerfile  README.md  docker-compose.yml  gradio-app-bmasterai.py  kubernetes.yaml  requirements.txt
examples/kubernetes-telemetry/: COMPONENTS.md  README.md  bmasterai-dashboard.json  bmasterrun-controller.py  bmasterrun-crd.yaml  generate-llm-runs.py  otel-collector-config.yaml
examples/langgraph-viral-youtube/: .env.example  README.md  agents.py  graph.py  main.py  requirements.txt  state.py
examples/mcp-github-streamlit/: README.md  STREAMLIT_FIXES.md  app.py  config.py  requirements.txt
examples/minimal-rag/: README_qdrant_cloud.md  bmasterai_rag_50_lines.py  bmasterai_rag_minimal.py  bmasterai_rag_qdrant_cloud.py  bmasterai_rag_ultra_minimal.py  gradio_qdrant_rag.py  requirements_qdrant.txt  test_qdrant_connection.py
examples/ollama-crossword-agent/: .env.example  .gitignore  INDEX.md  README.md  agent.py  grid.py  main.py  requirements.txt  vision.py
examples/openclaw-telemetry/: .gitignore  CONTRIBUTING.md  CRASH_FIXES.md  METRICS_FIX.md  QUICKSTART.md  README.md  UPDATE_NOTES.md  dashboard.py  dashboard_enhanced.py  dashboard_enhanced_fixed.py  requirements.txt  session_parser.py  start.sh
examples/otlp-export/: README.md  agent_with_otlp.py
examples/rag-qdrant/: .env.example  Dockerfile  README.md  bmasterai-gradio-rag.py  check_documents.py  debug_search.py  docker-compose.yml  gradio-app-rag.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.sh  start.sh  stop.sh  test_app_init.py  test_config.py  test_qdrant_connection.py  test_quick_actions.py
examples/streamlit-airflow-mcp/: LICENSE  README.md
examples/streamlit-airflow-mcp-example/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  enhanced_app.py  mcp_client.py  requirements.txt
examples/streamlit-app/: .env.example  .gitignore  README.md  app.py
examples/streamlit-databricks-mcp-example/: .env.example  Dockerfile  README.md  app_logic.py  databricks_mcp_server.py  docker-compose.yml  enhanced_app.py  requirements.txt
examples/streamlit_agent_search/: README.md  agent_discovery.py  app.py  requirements.txt
examples/streamlit_research_agents/: README.md  app.py  config.py  requirements.txt  (+1 more)
getting-started/: 01_basic_setup.py  02_simple_agent.py  03_multi_agent_system.py  README.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  monitoring.yaml  namespace.yaml  persistent-volume.yaml  secrets.yaml  service-account.yaml  service.yaml
lessons/: README.content.md  README.md
scripts/: generate-lesson-pdf.py
streamlit-app/: README.md  app.py  config.py  requirements.txt
tests/: __init__.py  test_enhanced_functionality.py
(+119 files in other folders)
